[gd_scene load_steps=6 format=3 uid="uid://bg2l1jctq4jbt"]

[ext_resource type="Script" uid="uid://c2jhumoh88lse" path="res://Scenes/main_menu.gd" id="1_28flt"]
[ext_resource type="AudioStream" uid="uid://bic1bllb0wpgc" path="res://Sounds/Sounds/Main Menu click sound.wav" id="3_1ehe0"]
[ext_resource type="Shader" uid="uid://cji6v3efgg4wv" path="res://Picture Frames/Material/post_process.gdshader" id="3_ce3w2"]
[ext_resource type="Script" uid="uid://c0tvhpayxfwk2" path="res://Scenes/Style_Switch.gd" id="4_n45e2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pba03"]
shader = ExtResource("3_ce3w2")
shader_parameter/style = 0

[node name="Main Menu" type="Node2D"]
script = ExtResource("1_28flt")

[node name="Button_Manager" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Button_Manager"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 528.0
offset_top = 256.0
offset_right = 625.0
offset_bottom = 392.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 24
alignment = 1

[node name="Start" type="Button" parent="Button_Manager/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="StyleSwitch" type="Button" parent="Button_Manager/VBoxContainer"]
layout_mode = 2
text = "StyleSwitch (Also Press Tab)"

[node name="Quit" type="Button" parent="Button_Manager/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="PostProcess" type="Node3D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="PostProcess"]

[node name="ColorRect" type="ColorRect" parent="PostProcess/CanvasLayer"]
material = SubResource("ShaderMaterial_pba03")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("4_n45e2")

[node name="Style Label" type="Label" parent="PostProcess/CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 13.0
offset_top = -84.0
offset_right = 175.0
offset_bottom = -11.0
grow_vertical = 0
theme_override_font_sizes/font_size = 45
text = "Hello world"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Style_Switch" type="AudioStreamPlayer" parent="PostProcess"]
stream = ExtResource("3_1ehe0")

[connection signal="pressed" from="Button_Manager/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Button_Manager/VBoxContainer/StyleSwitch" to="." method="_on_style_switch_pressed"]
[connection signal="pressed" from="Button_Manager/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
